# logksi

./: .gitignore  GNUmakefile.am  README.md  VERSION  configure.ac  makefile  mkversion.sh  rebuild-mac-static-installer.sh  rebuild-rpm.sh  rebuild-static-deb.sh  rebuild-static-rpm.sh  rebuild-static.sh  rebuild-tool-dependencies.sh  rebuild.sh
doc/: ChangeLog  logksi-conf.5  logksi-create.1  logksi-extend.1  logksi-extract.1  logksi-integrate.1  logksi-pubfile.1  logksi-sign.1  logksi-verify.1  logksi.1
packaging/deb/: control.in  copyright  rebuild_changelog.sh  rules.in
packaging/redhat/: ksi.spec.in  logksi.spec.in
packaging/win/: license.rtf
src/: GNUmakefile.am  api_wrapper.c  api_wrapper.h  common.h  component.c  component.h  conf_file.c  conf_file.h  debug_print.c  debug_print.h  err_trckr.c  err_trckr.h  ksitool_err.c  ksitool_err.h  logksi_err.c  logksi_err.h  main.c  makefile  obj_printer.c  obj_printer.h  printer.c  printer.h  regexpwrap.c  regexpwrap.h  smart_file.c  smart_file.h  tlv_object.c  tlv_object.h  tool.h  tool_box.c  tool_box.h
src/param_set/: param_set.c  param_set.h  param_set_obj_impl.h  param_value.c  param_value.h  parameter.c  parameter.h  strn.c  strn.h  task_def.c  task_def.h
src/tool_box/: blocks_info.c  blocks_info.h  blocks_info_impl.h  check.c  check.h  conf.c  create.c  default_tasks.h  extend.c  extract.c  extract_info.c  extract_info.h  integrate.c  io_files.c  io_files.h  ksi_init.c  ksi_init.h  logksi.c  logksi.h  logksi_impl.h  logsig_version.c  logsig_version.h  makefile  merkle_tree.c  merkle_tree.h  param_control.c  param_control.h  process.c  process.h  rsyslog.c  rsyslog.h  sign.c  task_initializer.c  task_initializer.h  verify.c
test/: TEST-README.md  bats-test.sh  construct_conf_file.sh  convert-to-memory-test.sh  convert.awk  memory-test.sh  test.sh
test/resource/certificates/: dummy-cert.pem
test/resource/conf/: ksi-tool-options.cfg  max-lvl-5.cfg
test/resource/continue-verification/: log-block-no2-changed  log-block-no2-changed.logsig  log-line-4-changed  log-line-4-removed  log-line-4-removed.logsig  log-missing-tlv-901.01.logsig  log-missing-tlv-904.905.logsig  log-missing-tlv-911.02.logsig  log-ok-one-sig-diff-client-id.logsig  log-rec-4-changed  log-rec-4-changed.logsig  log-sig-no2-wrong.logsig  log-unknown-tlv-904.905.666.logsig
test/resource/excerpt/: diff-client-id.excerpt  diff-client-id.excerpt.logsig  log-ok.excerpt  log-ok.excerpt.logsig
test/resource/file/: syslog
test/resource/interlink/: ok-testlog-interlink-1.logsig  ok-testlog-interlink-2.logsig  ok-testlog-interlink-resigned-1  ok-testlog-interlink-resigned-1.logsig  ok-testlog-interlink-same-sig-time-1.logsig  ok-testlog-interlink-same-sig-time-2  ok-testlog-interlink-same-sig-time-2.logsig  testlog-interlink-first-rec-time-changed-2  testlog-interlink-first-rec-time-changed-2.logsig  testlog-interlink-n-1-rec-time-changed-1  testlog-interlink-n-1-rec-time-changed-1.logsig
test/resource/log_file_list/: osx-line-end  windoes-line-end
test/resource/log_rec_time/: log-line-embedded-date-changed  log-line-embedded-date-changed-in-end-of-block-1  log-line-embedded-date-changed-in-end-of-block-1.excerpt  log-line-embedded-date-changed-in-end-of-block-1_2  log-line-embedded-date-changed.excerpt  log-line-embedded-date-changed.excerpt.logsig  log-line-embedded-date-changed.logsig  log-line-embedded-date-higher-and-lower-from-ksig
test/resource/logfiles/: all_hashes  legacy  legacy_extract.r1-20.excerpt  legacy_extract.r21-204.excerpt  legacy_with_missing_tree_hashes  linux-new-line  long-log-lines  mac-new-line  r1.excerpt  r1414.part  r1_modified.part  r1_too_long.part  r3-7.part  r3.6.9.excerpt  treehash2  treehash3  treehash7  treehash8
test/resource/logs_and_signatures/: equal-log-lines-one-missing.logsig  extended.logsig  invalid-aggr-algo  invalid-aggr-algo.logsig  large-line-skipping  large-line-skipping.logsig  log-sign-network-error  log-sign-network-error.logsig  log_no_rec_timeout_short1.logsig  log_repaired.logsig  only-1-unsigned.logsig  totally-resigned  totally-resigned.logsig  totally-unsigned  totally-unsigned.logsig  unsigned  unsigned.logsig
test/resource/logsignatures/: all_hashes.logsig  extract.base.logsig  hashes_missing_for_first_record.logsig  hashes_missing_for_last_record.logsig  legacy.gtsig  legacy_extract.gtsig  proof_wrong_level_correction_1.excerpt.logsig  proof_wrong_level_correction_2.excerpt.logsig  proof_wrong_link_direction.excerpt.logsig  proof_wrong_record_hash.part.logsig  proof_wrong_sibling_hash_1.excerpt.logsig  proof_wrong_sibling_hash_3.part.logsig  record_hash_missing_for_first_record.logsig  record_hash_missing_for_last_record.logsig  record_hash_missing_for_metarecord.logsig  record_hash_missing_for_metarecord_in_empty_block.logsig  record_hash_missing_for_second_record.logsig  record_hash_out_of_block.logsig  record_hash_too_many.logsig  record_hashes_not_stored_in_first_block.logsig  record_hashes_not_stored_in_second_block.logsig  secure.logsig  synchronous.logsig  tree_hash_1_missing_for_second_record.logsig  tree_hash_2_missing_for_second_record.logsig  tree_hash_final.logsig  tree_hash_final_wrong.logsig  tree_hash_missing_for_first_record.logsig  (+11 more)
test/test_suites/: conf_invalid.bats  conf_ok.bats  create-tlvutil.bats  create-urandom.bats  create_cmd.bats  create_linking.bats  create_log_file_list.bats  create_log_file_list_cmd.bats  create_rebuild.bats  create_state_file.bats  create_state_file_cmd.bats  create_static_file.bats  embedded_url.bats  extend.bats  extend_cmd.bats  extend_debug_output.bats  extract.bats  extract_cmd.bats  extract_debug_output.bats  extract_ksig.bats  hash_check.bats  integrate.bats  integrate.test  integrate_cmd.bats  integrate_debug_output.bats  integrate_recover.bats  legacy.bats  linux-pipe.test  sign.bats  sign.test  sign_cmd.bats  sign_continue.bats  sign_debug_output.bats  treehash_check.bats  verify.bats  verify_after_extend.bats  verify_after_integrate.bats  verify_after_sign.bats  verify_cmd.bats  verify_continue.bats  (+6 more)
(+15 files in other folders)
